--- a/playbooks/system.yaml
+++ b/playbooks/system.yaml
@@ -45,6 +45,7 @@
       apt:
         pkg:
           - git
+          - silversearcher-ag
           - zsh
           - htop
           - alacritty
