--- a/playbooks/system.yaml
+++ b/playbooks/system.yaml
@@ -75,6 +75,7 @@
           - rofi
           - tk-dev
           - tmux
+          - keychain
           - wget
           - xclip
           - xz-utils
