--- a/playbooks/system.yaml
+++ b/playbooks/system.yaml
@@ -21,6 +21,16 @@
         mode: 0700
         state: directory
 
+    # - name: Copy files
+    #   file:
+    #     dest: {{ path }}
+    #     src: root/*
+    #
+    # https://gist.github.com/andrebrait/961cefe730f4a2c41f57911e6195e444
+    - name: update-initramfs
+      shell: update-initramfs -u -k all
+      become: true
+
     - name: Copy ssh key
       copy:
         src: "{{ source_key }}"
@@ -44,6 +54,10 @@
       become: true
       apt:
         pkg:
+          - neofetch
+          - vlc
+          - imwheel
+          - bat
           - feh
           - git
           - silversearcher-ag
@@ -88,6 +102,7 @@
         state: link
       loop:
         - { src: 'src/dotfiles/.config/i3', dest: '.config/i3' }
+        - { src: 'src/dotfiles/.profile', dest: '.profile' }
         - { src: 'src/dotfiles/.config/i3status', dest: '.config/i3status' }
         - { src: 'src/dotfiles/.config/alacritty', dest: '.config/alacritty' }
         - { src: 'src/dotfiles/.gitconfig', dest: '.gitconfig' }
