--- a/playbooks/dotfiles.yaml
+++ b/playbooks/dotfiles.yaml
@@ -11,6 +11,7 @@
         repo: git@github.com:wmolicki/dotfiles.git
         dest: "{{ home }}/src/dotfiles"
         update: yes
+        depth: 1
 
     - name: Create symlinks to dotfiles
       ansible.builtin.file:
@@ -26,6 +27,17 @@
         - { src: 'src/dotfiles/.gitconfig', dest: '.gitconfig' }
         - { src: 'src/dotfiles/.config/nvim/init.vim', dest: '.config/nvim/init.vim' }
         - { src: 'src/dotfiles/.zshrc', dest: '.zshrc' }
+        - { src: 'src/dotfiles/.tmux.conf', dest: '.tmux.conf' }
+
+    - name: Check Tmux Plugin Manager installed
+      stat:
+        path: "{{ home }}/.tmux/plugins/tpm"
+      register: tpm
+
+    - name: Install Tmux Plugin Manager 
+      shell: |
+        git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+      when: not tpm.stat.exists
 
     - name: Check OhMyZsh installed
       stat:
