--- a/playbooks/system.yaml
+++ b/playbooks/system.yaml
@@ -38,6 +38,7 @@
           - pkg-config
           - unzip
           - curl
+          - tmux
           - doxygen
           - neofetch
           - vlc
